# toolchains_emscripten

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  bazelrc  emscripten_deps.bzl  toolchains.bzl
.devcontainer/: Dockerfile  devcontainer.json
emscripten_toolchain/: BUILD.bazel  wasm_cc_binary.bzl
extensions/: cache.bzl  emscripten.bzl  emscripten_config.py  toolchain.BUILD.bazel  toolchain.tpl
platform/: BUILD.bazel
testing/: .bazelrc  BUILD.bazel  MODULE.bazel
testing/rules_cc/: BUILD
testing/rules_cc/c_binary/: BUILD
testing/rules_cc/c_library/: BUILD
testing/rules_cc/c_side_module/: BUILD
testing/rules_cc/c_side_module/src/: main.c  test.c
testing/rules_cc/cxx_binary/: BUILD
testing/rules_cc/cxx_library/: BUILD
testing/rules_cc/cxx_side_module/: BUILD
testing/rules_cc/cxx_side_module/src/: main.cxx
testing/rules_foreign_cc/cmake_c_binary/: BUILD  CMakeLists.txt
testing/rules_foreign_cc/cmake_c_side_module/: BUILD  CMakeLists.txt
testing/rules_foreign_cc/cmake_c_static_library/: BUILD  CMakeLists.txt
testing/rules_foreign_cc/cmake_c_static_library/src/: main.c
testing/rules_foreign_cc/cmake_cxx_binary/: BUILD  CMakeLists.txt
testing/rules_foreign_cc/cmake_cxx_binary/src/: test.cxx
testing/rules_foreign_cc/cmake_cxx_side_module/: BUILD  CMakeLists.txt
testing/rules_foreign_cc/cmake_cxx_side_module/src/: main.cxx
testing/rules_foreign_cc/cmake_cxx_static_library/: BUILD  CMakeLists.txt
testing/rules_foreign_cc/cmake_cxx_static_library/src/: main.cxx  test.cxx
testing/rules_foreign_cc/configure_make_c_binary/: BUILD  Makefile.am  configure.ac
testing/rules_foreign_cc/configure_make_c_side_module/: BUILD  Makefile.am  configure.ac
testing/rules_foreign_cc/configure_make_c_side_module/src/: main.c
testing/rules_foreign_cc/configure_make_c_static_library/: BUILD  Makefile.am  configure.ac
testing/rules_foreign_cc/configure_make_cxx_binary/: BUILD  Makefile.am
testing/rules_foreign_cc/configure_make_cxx_side_module/: BUILD  Makefile.am  configure.ac
testing/rules_foreign_cc/configure_make_cxx_static_library/: BUILD  Makefile.am  configure.ac
testing/rules_foreign_cc/meson_c_binary/: BUILD  meson.build
testing/rules_foreign_cc/meson_c_binary/src/: test.c
testing/rules_foreign_cc/meson_c_side_module/: BUILD  meson.build
testing/rules_foreign_cc/meson_c_static_library/: BUILD  meson.build
testing/rules_foreign_cc/meson_c_static_library/src/: test.h
testing/rules_foreign_cc/meson_cxx_binary/: BUILD  meson.build
testing/rules_foreign_cc/meson_cxx_side_module/: BUILD  meson.build  meson_cross_file.txt
testing/rules_foreign_cc/meson_cxx_side_module/src/: main.cxx  test.cxx
testing/rules_foreign_cc/meson_cxx_static_library/: BUILD  meson.build
testing/rules_foreign_cc/meson_cxx_static_library/src/: main.cxx  test.h
testing/rules_foreign_cc_cmake/: BUILD
testing/rules_foreign_cc_cmake/src/: CMakeLists.txt  test.cc
testing/rules_foreign_cc_configure_make/: BUILD
testing/rules_foreign_cc_configure_make/src/: Makefile.am  configure.ac
testing/rules_foreign_cc_meson/: BUILD
testing/rules_foreign_cc_meson/src/: meson.build
tests/: BUILD.bazel
tests/rules_cc/: .bazelrc  BUILD  MODULE.bazel  main.js
tests/rules_foreign_cc_cmake/: BUILD  MODULE.bazel
tests/rules_foreign_cc_cmake/src/: CMakeLists.txt
toolchain/: BUILD.bazel  config.bzl  emscripten_binary.bzl  emscripten_cache.bzl  temp_dir.bzl
