"bazel-contrib/toolchains_emscripten"

module(
    name = "toolchains_emscripten",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "rules_nodejs", version = "6.3.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.14.0")
use_repo(node, "nodejs")
