platform(
    name = "wasm32-emscripten",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//cpu:wasm32",
        "@platforms//os:emscripten",
    ],
)

platform(
    name = "wasm32-wasi",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//cpu:wasm32",
        "@platforms//os:wasi",
    ],
)