# At the moment, this rule does not do anything, however, it would be possible to just have a single
# module with my integration tests that creates the various toolchains that it needs.

test_suite(
    name = "integration",
    tests = [
        "//rules_cc/cxx_binary:validate",
        "//rules_foreign_cc/cmake_cxx_binary:validate",
        "//rules_foreign_cc/cmake_cxx_side_module:validate",
        "//rules_foreign_cc/configure_make_cxx_binary:validate",
        "//rules_foreign_cc/configure_make_cxx_side_module:validate",
        "//rules_foreign_cc/meson_cxx_binary:validate",
        "//rules_foreign_cc/meson_cxx_side_module:validate",
    ]
)
